test/captureAssign1.slq
// args: --run

def main(){
	x:=0:ğ”¹;
	def foo(){
		x=1; /// error
	}
	return foo();
}
